--- a/shecodes-plus-projects/shecode+wk2-homework/wk2-HW.css
+++ b/shecodes-plus-projects/shecode+wk2-homework/wk2-HW.css
@@ -19,3 +19,9 @@ button:hover {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 90px;
 }
+#city {
+  font-weight: bolder;
+  font-size: 100px;
+  margin: 5px 5px;
+  padding: 5px 10px;
+}
