--- a/portfolio project/style.css
+++ b/portfolio project/style.css
@@ -1,7 +1,3 @@
-body{
-    background-color: #f3e3d4;
-    
-}
 h1{
     display: flex;
     justify-content: center;
@@ -25,6 +21,10 @@ p{
     font-family: Arial, Helvetica, sans-serif;
 }
 .container{
+    max-width: 100%;
+    height: auto;
+}
+.contain{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -34,12 +34,12 @@ p{
     border: 3px solid rgb(90, 74, 105);
     border-radius: 10px;
     padding: 20px;
-    width: 100px;
-    height: 50px;
+    width: 150px;
+    height: 100px;
     font-size: 25px;
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #d49d6c;
+    background-color: rgb(238, 221, 221);
     margin: 15px;
 }
 .main-project{
@@ -52,15 +52,11 @@ p{
     margin-left: 100px;
     margin-right: 100px;
     padding: 20px;
-    width: 100px;
-    height: 50px;
+    width: 150px;
+    height: 100px;
      font-size: 25px;
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #d39c6c;
+    background-color: rgb(241, 225, 225);
     border-radius: 10px;
-}
-a{
-    text-decoration: none;
-    color: #974834;
 }
