--- a/portfolio project/style.css
+++ b/portfolio project/style.css
@@ -1,23 +1,15 @@
-h1{
-    display: flex;
-    justify-content: center;
-    font-size: 50px;
+.first{
+    font-size: 60px;
+    font-weight: bold;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.second{
+    font-size: 70px;
     font-weight: bolder;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #888870;
+    font-family: Arial, Helvetica, sans-serif;
 }
-h2{
-    display: flex;
-    justify-content: center;
-    font-size: 30px;
-    font-weight: bold;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-p{
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-    font-weight: bold;
+.desc{
+    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
 }
 .container{
