--- a/portfolio project/style.css
+++ b/portfolio project/style.css
@@ -1,47 +1,56 @@
 body{
-    background-color: rgba(107, 33, 175, 0.897);
+    background: radial-gradient(circle, #744c82 0%, #4E3357 26%, #281A2C 74%);
 }
-.first{
-    font-size: 60px;
-    font-weight: bold;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-.second{
-    font-size: 70px;
-    font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.desc{
-    font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.container{
-    max-width: 100%;
-    height: auto;
-}
-.contain{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.mini-container{
+.main{
     text-align: center;
-    border: 3px solid rgb(90, 74, 105);
-    border-radius: 10px;
-    padding: 20px;
-    width: 150px;
-    height: 100px;
-    font-size: 25px;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: rgb(238, 221, 221);
-    margin: 15px;
 }
-@media (max-width: 576px){
-    .title{
-        text-align: center;
+.name{
+    font-size: 90px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #000000;
+    line-height: 150px;
+}
+.about{
+    color: #F5F5F5;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 60px;
+    line-height: 150px;
+}
+.wave{
+    font-size: 70px;
+    color: #000000;
+    line-height: 150px;
+}
+.nav{
+    background-color: #D9D9D9;
+}
+.button{
+    background-color: #735539;
+    padding: 30px;
+    border-radius: 25px;
+}
+.link{
+    color: #000000;
+    text-decoration: none;
+}
+.aboutme{
+    color: #4F0B40
+}
+
+@media(max-width: 860px){
+    .name{
+        font-size: 60px;
+        line-height: 100px;
     }
-    .small{
-        text-align: center;
+    .wave{
+        font-size: 50px;
+        line-height: 100px;
+    }
+    .about{
+        font-size: 40px;
+        line-height: 100px;
+    }
+    .button{
+        padding: 20px;
     }
 }
